--- a/tex/sprawozdanie.tex
+++ b/tex/sprawozdanie.tex
@@ -206,7 +206,7 @@ Powtarzaj:
 
 \subsection{Wnioski}
 
-[DO NAPISANIA]
+Z wymienionych wyżej pomiarów można wywnioskować, że wykorzystanie oceny ruchów z poprzednich iteracji albo ruchów kandydackich znacząco przyspieszania działanie algorytmu - czas jednej iteracji jest zredukowany o dwa rzędy wielkości. Dystans osiągany przez zmodyfikowane algorytmy jest zbliżony do tych osiąganych przez algorytm wzorcowy, przy czym wykorzystanie oceny ruchów z poprzednich iteracji uzyskuje średni wynik lepszy zarówno od ruchów kandydackich jak i algorytmu wzorcowego.
 
 \section{Zadanie 2}
 
