--- a/tex/sprawozdanie.tex
+++ b/tex/sprawozdanie.tex
@@ -63,47 +63,27 @@ Zadanie polega na poprawie efektywności czasowej lokalnego przeszukiwania w wer
 
 \begin{lstlisting}
 Wygeneruj losowe rozwiązanie.
-Wygeneruj listę ruchów.
+Wygeneruj listę wszystkich możliwych ruchów.
 Powtarzaj:
-    Sprawdź listę ruchów:
-        Dla każdego ruchu z listy ruchów:
+    Sprawdź listę ruchów w poszukiwaniu ruchu do wykonania i wykonaj ruch:
+        Przeszukiwanie listy w poszukiwaniu najlepszego aplikowalnego ruchu:
             Jeżeli typ ruchu to zamiana punktów:
-                Weź trzy punkty z rozwiązania.
-                Jeżeli wszystkie trzy punkty istnieją oraz punkt spoza rozwiązania rzeczywiście jest poza rozwiązaniem:
-                    Jeżeli pierwszy i drugi punkt z object1 są sąsiadami oraz drugi i trzeci punkt z object1 są sąsiadami:
-                        Oblicz dystans aktualnego rozwiązania.
-                        Dodaj punkty z aktualnego rozwiązania do listy.
-                        Zamień środkowy punkt z trójki punktów z punktem spoza rozwiązania.
-                        Oblicz dystans rozwiązania po zamianie punktów.
-                        Jeżeli różnica dystansów nie jest równa delcie to wyrzuć błąd.
-                        Zapisz ruch jako wykonany ruch.
-                        Dodaj ruch co listy ruchów do usunięcia.
-                    W przeciwnym wypadku:
-                        Dodaj ruch co listy ruchów do usunięcia.
-                W przeciwnym wypadku:
-                    Dodaj ruch co listy ruchów do usunięcia.
-            W przeciwnym wypadku dla zamiany krawędzi:
-                Weź punkty pierwszej krawędzi i punkty drugiej krawędzi.
-                Jeżeli indeks pierwszego punktu z pierwszej krawędzi jest większy od indeksu drugiego punktu i pierwszy punkt nie jest ostatnim punktem, to zamień te punkty ze sobą.
-                Jeżeli indeks pierwszego punktu z drugiej krawędzi jest większy od indeksu drugiego punktu i pierwszy punkt nie jest ostatnim punktem, to zamień te punkty ze sobą.
-                Jeżeli pierwszy ruch z pierwszej pary oraz pierwszy ruch z drugiej pary istnieją:
-                    Jeżeli następny punkt względem pierwszego punktu z pierwszej krawędzi to drugi punkt z pierwszej krawędzi oraz następny punkt względem pierwszego punktu z drugiej krawędzi to drugi punkt z drugiej krawędzi:
-                        Oblicz dystans aktualnego rozwiązania.
-                        Dodaj punkty z aktualnego rozwiązania do listy.
-                        Zamień krawędzie ze sobą.
-                        Oblicz dystans rozwiązania po zamianie krawędzi.
-                        Jeżeli różnica dystansów nie jest równa delcie to wyrzuć błąd.
-                        Zapisz ruch jako wykonany ruch.
-                        Dodaj ruch co listy ruchów do usunięcia.
-                    W przeciwnym wypadku:
-                        Dodaj ruch co listy ruchów do usunięcia.
-                W przeciwnym wypadku:
-                    Dodaj ruch co listy ruchów do usunięcia.
+                Sprawdź czy punkt do wymiany i jego sąsiedzi są w rozwiązaniu.
+                Jeżeli wszystkie trzy punkty są w rozwiązaniu oraz punkt spoza rozwiązania rzeczywiście jest poza rozwiązaniem:
+              		Zamień punkty do wymiany w tym ruchu.
+              		Zapisz ruch jako wykonany ruch.
+               		Dodaj ruch do listy ruchów do usunięcia.
+              	W przeciwnym wypadku:
+                	Dodaj ruch do listy ruchów do usunięcia.
+            W przeciwnym wypadku jeżeli ruch to zamiana krawędzi:
+            	Sprawdzenie czy ruch jest aplikowalny:
+            		Jeżeli w rozwiązaniu są krawędzie do wymiany w tym ruchu i nie są to sąsiednie krawędzie:
+                		Zamień krawędzie ze sobą.
+                		Zapisz ruch jako wykonany ruch.
+               			Dodaj ruch do listy ruchów do usunięcia.
+          			W przeciwnym wypadku:
+                    	Dodaj ruch do listy ruchów do usunięcia.
         Usuń z listy ruchów te ruchy, które zostały dodane do listy ruchów do usunięcia.
-        Jeżeli wykonano ruch, to dodaj wykonany ruch do listy
-    Zaktualizuj rozwiązanie.
-    Zaktualizuj listę ruchów.
-    Dodaj ruch do listy poprzednio wykonanych ruchów.
     Przerwij zewnętrzną pętlę jeżeli lista ruchów jest pusta.
 \end{lstlisting}
 
@@ -112,28 +92,23 @@ Powtarzaj:
 \begin{lstlisting}
 Wygeneruj losowe rozwiązanie.
 Powtarzaj:
-    Wygeneruj ruchy kandydackie:
-        Znajdź punkty znajdujące się poza rozwiązaniem.
-        Dla każdego typu ruchu:
-            Jeżeli typ ruchu to zamiana punktów:
-                Dla każdego punktu w rozwiązaniu:
-                    Dla każdego punktu poza rozwiązaniem:
-                        Oblicz deltę dla zamianych tych dwóch punktów (punktu w rozwiązaniu i punktu poza rozwiązaniem).
+	Wygeneruj ruchy kandydackie:
+   		Tworzenie ruchów wymiany wierzchołków:
+        	Dla każdego punktu w rozwiązaniu:
+            	Dla każdego punktu poza rozwiązaniem:
+                	Oblicz deltę dla zamiany tych dwóch punktów (punktu w rozwiązaniu i punktu poza rozwiązaniem).
+                	Jeżeli delta jest mniejsza od zera, to dodaj ten ruch do listy ruchów kandydackich.
+   		Tworzenie ruchów wymiany krawędzi:
+        	Dla każdej krawędzi w rozwiązaniu:
+            	Dla najbliższych punktów do tej krawędzi:
+                	Jeżeli ten punkt jest w rozwiązaniu:
+                        Oblicz deltę dla zamiany krawędzi.
                         Jeżeli delta jest mniejsza od zera, to dodaj ten ruch do listy ruchów kandydackich.
-            W przeciwnym wypadku dla zamiany krawędzi:
-                Dla każdego punktu w rozwiązaniu:
-                    Dla najbliższych punktów tego punktu:
-                        Przerwij pętlę, jeżeli nie jest to jeden z pięciu najbliższych punktów.
-                        Przejdź do następnego najbliższego punktu, jeżeli punkt nie leży w aktualnym rozwiązaniu.
-                        Oblicz deltę dla zamiany krawędzi pomiędzy tymi dwoma punktami.
-                        Jeżeli delta jest mniejsza od zera, to dodaj ten ruch do listy ruchów kandydackich.
-        Posortuj wygenerowane ruchy kandydackie od najlepszego do najgorszego.
-    Jeżeli nie wygenerowano ruchów kandydackich, to przerwij zewnętrzną pętlę, w przeciwnym wypadku:
-        Jeżeli delta najlepszego punktu nie jest mniejsza od zera, to przerwij zewnętrzną pętlę, w przeciwnym wypadku:
-            Jeżeli typ najlepszego ruchu to pointOuterInnerChange:
-                W rozwiązaniu zamień punkty wskazane przez najlepszy kandydacki ruch.
-            W przeciwnym wypadku:
-                W rozwiązaniu zamień krawędzie wskazane przez najlepszy kandydacki ruch.
+ 	Posortuj wygenerowane ruchy kandydackie od najlepszego do najgorszego.
+	Jeżeli nie wygenerowano ruchów kandydackich lub wszystkie ruchy mają dodatnią deltę:
+    	Przerwij zewnętrzną pętlę
+	W przeciwnym wypadku:
+    	W rozwiązaniu zamień krawędzie wskazane przez najlepszy kandydacki ruch.
 
 \end{lstlisting}
 
